# older_pytorch_installation

./: .gitignore  README.md  download_pascal_2007.sh
conda_env/: Pipfile  Pipfile_temp.txt  environment.yml  initial_fastai_0.7_check.ipynb  requirement.txt  requirements.txt  requirements_fastai_07.txt
nb/: Multi_class_pascal.ipynb  object_detection_pacal.ipynb  object_detection_pacal_cpu.ipynb
pascal_dataset/: download_pascal_data.sh
pipenv_env/: Pipfile
set_up/: environment.yml  pyproject.toml  set_up_conda.sh
w_env_yml/: README.md  environment.yml
